--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
             Rings' fan!
         </p>
         <br>
-        <a href="quiz.ejs">Let's get started...</a>
+        <a href="/quiz">Let's get started...</a>
     </section>
 
 </main>
