--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -1,6 +1,6 @@
 <script src="/js/quiz-handler.js" defer></script>
 
-<main id="quiz-page">
+<main id="quiz-page" class="wrapper">
     <div id="quiz-box">
         <noscript>
             <p>You need Javascript to run this quiz</p>
