--- a/public/css/main.css
+++ b/public/css/main.css
@@ -482,6 +482,44 @@ header .account-header-piece {
   margin-bottom: auto;
 }
 
+#quiz-page #quiz-box #quiz-main h2, #quiz-page #quiz-box #quiz-main h3 {
+  color: var(--c-main-text);
+  opacity: var(--o-main-text);
+}
+
+#quiz-page #quiz-box #quiz-main cite {
+  display: block;
+  margin: 0 auto;
+  max-width: 90%;
+  margin-bottom: 1rem;
+}
+
+#quiz-page #quiz-box #quiz-main cite .quiz-quote {
+  letter-spacing: 0.05rem;
+}
+
+#quiz-page #quiz-box #quiz-main .quiz-options {
+  margin: 0 auto;
+  width: 90%;
+}
+
+#quiz-page #quiz-box #quiz-main .quiz-options h3 {
+  text-align: center;
+  padding: 0.4rem;
+  margin-bottom: 0.87rem;
+  border-bottom: solid 3px var(--c-main-title);
+}
+
+#quiz-page #quiz-box #quiz-main .quiz-options .quiz-character-option, #quiz-page #quiz-box #quiz-main .quiz-options .quiz-movie-option {
+  padding: 0.4rem 0;
+  background-color: var(--c-main-title);
+  margin: 0.4rem 0;
+}
+
+#quiz-page #quiz-box #quiz-main .quiz-options .quiz-character-option h2, #quiz-page #quiz-box #quiz-main .quiz-options .quiz-movie-option h2 {
+  margin-left: 0.5rem;
+}
+
 #quiz-page #quiz-box #quiz-main .gamemode-button {
   display: block;
   width: 200px;
@@ -495,12 +533,12 @@ header .account-header-piece {
   -ms-grid-column: 1;
   grid-area: qfooter;
   margin-top: auto;
-  padding: 5px 0;
+  padding: 15px 0;
 }
 
-#quiz-page #quiz-box #quiz-footer h1 {
-  margin: 0 auto;
-  font-size: 1rem;
+#quiz-page #quiz-box #quiz-footer h1, #quiz-page #quiz-box #quiz-footer h2 {
+  font-size: 1.2rem;
+  color: var(--c-main-text);
 }
 
 /* #endregion */
