--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -25,5 +25,34 @@
                 </div>
         </article>
         <%})%>
+
+        <article name="" class="favorites-item">
+                <div class="favorites-left">
+                <p class="favorites-item-quote">“Yeeeeeeeeeeeeeeee”</p>
+                <p class="blacklist-item-reason">Character: <a href="#">Baby Yoda</a></p>
+                </div>
+                <div class="favorites-right">
+                        <input type="image" src="/assets/icon/trash.svg" alt="trash" class="remove-favorites-item">
+                </div>
+        </article>
+        <article name="" class="favorites-item">
+                <div class="favorites-left">
+                <p class="favorites-item-quote">“Yeeeeeeeeeeeeeeee”</p>
+                <p class="blacklist-item-reason">Character: <a href="#">Baby Yoda</a></p>
+                </div>
+                <div class="favorites-right">
+                        <input type="image" src="/assets/icon/trash.svg" alt="trash" class="remove-favorites-item">
+                </div>
+        </article>
+        <article name="" class="favorites-item">
+                <div class="favorites-left">
+                <p class="favorites-item-quote">“Yeeeeeeeeeeeeeeee”</p>
+                <p class="blacklist-item-reason">Character: <a href="#">Baby Yoda</a></p>
+                </div>
+                <div class="favorites-right">
+                        <input type="image" src="/assets/icon/trash.svg" alt="trash" class="remove-favorites-item">
+                </div>
+        </article>
+
         </section>
 </main>
