css favorites/blacklist

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -553,6 +553,37 @@ header .account-header-piece {
 
 /* #endregion */
 /* #region Favorites/Blacklisted page */
+.favorites-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 1.5rem;
+  padding-bottom: 0.3rem;
+  background-color: var(--c-overlay-background);
+  width: 98%;
+  padding: 15px;
+  border-radius: 25px;
+}
+
+.favorites-item > div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.favorites-item .image-rating {
+  margin-right: 1rem;
+}
+
 /* #endregion */
 /* #region 404 Page */
 #error_page {
