--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -1,6 +1,6 @@
 <script src="/js/favorites.js" defer></script>
 
-<main id= "favorites_container" class="wrapper">
+<main id= "rating_container" class="wrapper">
 
     <section class="title-bar">
         <h1>Favorites</h1>
@@ -28,8 +28,11 @@
 
         <article name="" class="favorites-item">
                 <div class="favorites-left">
+                <input type="image" src="/assets/icon/ring.svg" alt="ring" class="image-rating">
+                <div>
                 <p class="favorites-item-quote">“Yeeeeeeeeeeeeeeee”</p>
                 <p class="blacklist-item-reason">Character: <a href="#">Baby Yoda</a></p>
+                </div>
                 </div>
                 <div class="favorites-right">
                         <input type="image" src="/assets/icon/trash.svg" alt="trash" class="remove-favorites-item">
@@ -37,22 +40,26 @@
         </article>
         <article name="" class="favorites-item">
                 <div class="favorites-left">
+                <input type="image" src="/assets/icon/ring.svg" alt="ring" class="image-rating">
+                <div>
                 <p class="favorites-item-quote">“Yeeeeeeeeeeeeeeee”</p>
                 <p class="blacklist-item-reason">Character: <a href="#">Baby Yoda</a></p>
+                </div>
                 </div>
                 <div class="favorites-right">
                         <input type="image" src="/assets/icon/trash.svg" alt="trash" class="remove-favorites-item">
                 </div>
-        </article>
-        <article name="" class="favorites-item">
+        </article><article name="" class="favorites-item">
                 <div class="favorites-left">
+                <input type="image" src="/assets/icon/ring.svg" alt="ring" class="image-rating">
+                <div>
                 <p class="favorites-item-quote">“Yeeeeeeeeeeeeeeee”</p>
                 <p class="blacklist-item-reason">Character: <a href="#">Baby Yoda</a></p>
+                </div>
                 </div>
                 <div class="favorites-right">
                         <input type="image" src="/assets/icon/trash.svg" alt="trash" class="remove-favorites-item">
                 </div>
         </article>
-
         </section>
 </main>
