--- a/public/css/main.css
+++ b/public/css/main.css
@@ -77,7 +77,7 @@ label {
           flex-direction: row;
   border-bottom: solid 3px var(--c-main-title);
   font-size: 30px;
-  margin-top: 1.5rem;
+  margin-top: 3rem;
   padding-bottom: 0.3rem;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
@@ -465,12 +465,10 @@ header .account-header-piece {
   display: -ms-grid;
   display: grid;
   row-gap: 1rem;
-  -ms-grid-rows: min-content  min-content;
-      grid-template-rows: -webkit-min-content  -webkit-min-content;
-      grid-template-rows: min-content  min-content;
-      grid-template-areas: "qheader"
- "qmain"
- "qfooter";
+  -ms-grid-rows: min-content min-content;
+      grid-template-rows: -webkit-min-content -webkit-min-content;
+      grid-template-rows: min-content min-content;
+      grid-template-areas: "qheader" "qmain" "qfooter";
 }
 
 #quiz-page #quiz-box #quiz-head {
@@ -492,7 +490,8 @@ header .account-header-piece {
   margin-bottom: auto;
 }
 
-#quiz-page #quiz-box #quiz-main h2, #quiz-page #quiz-box #quiz-main h3 {
+#quiz-page #quiz-box #quiz-main h2,
+#quiz-page #quiz-box #quiz-main h3 {
   color: var(--c-main-text);
   opacity: var(--o-main-text);
 }
@@ -510,6 +509,30 @@ header .account-header-piece {
   letter-spacing: 0.05rem;
 }
 
+@media only screen and (min-width: 750px) {
+  #quiz-page #quiz-box #quiz-main cite {
+    max-width: 800px;
+    margin-top: 4rem;
+    margin-bottom: 6rem;
+    font-size: 1.7rem;
+  }
+}
+
+@media only screen and (min-width: 1080px) {
+  #quiz-page #quiz-box #quiz-main cite {
+    max-width: 1000px;
+    margin-top: 4rem;
+    margin-bottom: 6rem;
+    font-size: 1.7rem;
+  }
+}
+
+@media only screen and (min-width: 1920px) {
+  #quiz-page #quiz-box #quiz-main cite {
+    max-width: 90%;
+  }
+}
+
 #quiz-page #quiz-box #quiz-main .quiz-options {
   margin: 0 auto;
   width: 90%;
@@ -518,52 +541,147 @@ header .account-header-piece {
 #quiz-page #quiz-box #quiz-main .quiz-options h3 {
   text-align: center;
   padding: 0.4rem;
-  margin-bottom: 0.87rem;
+  margin-bottom: 0.1rem;
   border-bottom: solid 3px var(--c-main-title);
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
-#quiz-page #quiz-box #quiz-main .quiz-options .quiz-character-option, #quiz-page #quiz-box #quiz-main .quiz-options .quiz-movie-option {
+#quiz-page #quiz-box #quiz-main .quiz-options .quiz-character-option,
+#quiz-page #quiz-box #quiz-main .quiz-options .quiz-movie-option {
   padding: 1.2rem 0;
   background-color: var(--c-main-title);
-  margin: 0.4rem 0;
+  margin: 0.6rem 0;
   text-align: center;
 }
 
-#quiz-page #quiz-box #quiz-main .quiz-options .quiz-character-option h2, #quiz-page #quiz-box #quiz-main .quiz-options .quiz-movie-option h2 {
+#quiz-page #quiz-box #quiz-main .quiz-options .quiz-character-option h2,
+#quiz-page #quiz-box #quiz-main .quiz-options .quiz-movie-option h2 {
   margin-left: 0.5rem;
 }
 
 @media only screen and (min-width: 750px) {
-  #quiz-page #quiz-box #quiz-main .quiz-options .quiz-character-option, #quiz-page #quiz-box #quiz-main .quiz-options .quiz-movie-option {
-    width: 300px;
+  #quiz-page #quiz-box #quiz-main .quiz-options .quiz-character-option,
+  #quiz-page #quiz-box #quiz-main .quiz-options .quiz-movie-option {
+    width: 325px;
+    margin: 1.1rem 0;
+    padding: 1.5rem 0;
   }
 }
 
 @media only screen and (min-width: 1080px) {
-  #quiz-page #quiz-box #quiz-main .quiz-options .quiz-character-option, #quiz-page #quiz-box #quiz-main .quiz-options .quiz-movie-option {
-    width: 500px;
+  #quiz-page #quiz-box #quiz-main .quiz-options .quiz-character-option,
+  #quiz-page #quiz-box #quiz-main .quiz-options .quiz-movie-option {
+    width: 490px;
   }
+}
+
+@media only screen and (min-width: 1920px) {
+  #quiz-page #quiz-box #quiz-main .quiz-options .quiz-character-option,
+  #quiz-page #quiz-box #quiz-main .quiz-options .quiz-movie-option {
+    width: 600px;
+  }
+}
+
+#quiz-page #quiz-box #quiz-main .quiz-options .quiz-correct-option {
+  background-color: #389b37;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr max-content 1fr;
+      grid-template-columns: 1fr -webkit-max-content 1fr;
+      grid-template-columns: 1fr max-content 1fr;
+      grid-template-areas: ". name score";
+}
+
+#quiz-page #quiz-box #quiz-main .quiz-options .quiz-correct-option h2:first-of-type {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: name;
+}
+
+#quiz-page #quiz-box #quiz-main .quiz-options .quiz-correct-option h2:last-of-type {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+  grid-area: score;
+  margin-left: auto;
+  margin-right: 1rem;
+}
+
+#quiz-page #quiz-box #quiz-main .quiz-options .quiz-wrong-option {
+  background-color: #e23d16;
 }
 
 @media only screen and (min-width: 750px) {
   #quiz-page #quiz-box #quiz-main .quiz-options {
-    width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: space-evenly;
         -ms-flex-pack: space-evenly;
             justify-content: space-evenly;
+    gap: 3rem;
   }
 }
 
-#quiz-page #quiz-box #quiz-main .gamemode-button {
-  display: block;
-  width: 200px;
-  height: 200px;
+#quiz-page #quiz-box #quiz-main .quiz-like-panel {
   margin: 0 auto;
-  margin-top: 1rem;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-top: 3rem;
+  text-align: center;
+}
+
+#quiz-page #quiz-box #quiz-main .quiz-like-panel input[type="image"] {
+  width: 30px;
+  height: 30px;
+}
+
+#quiz-page #quiz-box #quiz-main .quiz-like-panel #reason-dislike-popup {
+  display: none;
+  -webkit-animation: fadeIn 500ms;
+          animation: fadeIn 500ms;
+  margin: 0 auto;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  text-align: center;
+}
+
+#quiz-page #quiz-box #quiz-main .quiz-like-panel #reason-dislike-popup div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-column-gap: 1rem;
+          column-gap: 1rem;
+}
+
+#quiz-page #quiz-box #quiz-main .quiz-like-panel #reason-dislike-popup div input[type="image"] {
+  margin-top: 0.3rem;
+}
+
+#quiz-page #quiz-box #quiz-main .gamemode-buttons .gamemode-button {
+  margin: 0 auto;
+  display: block;
+  width: 300px;
+  height: 300px;
+  margin-top: 3rem;
+}
+
+@media only screen and (min-width: 518px) {
+  #quiz-page #quiz-box #quiz-main .gamemode-buttons {
+    position: absolute;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    left: 50%;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+            transform: translateX(-50%) translateY(-50%);
+    top: 50%;
+    gap: 5rem;
+  }
 }
 
 #quiz-page #quiz-box #quiz-footer {
@@ -574,18 +692,22 @@ header .account-header-piece {
   padding: 15px 15px;
 }
 
-#quiz-page #quiz-box #quiz-footer h1, #quiz-page #quiz-box #quiz-footer h2 {
+#quiz-page #quiz-box #quiz-footer h1,
+#quiz-page #quiz-box #quiz-footer h2 {
   font-size: 1.2rem;
   color: var(--c-main-text);
 }
 
-#quiz-page #quiz-box #quiz-footer #quiz-submit:disabled, #quiz-page #quiz-box #quiz-footer #prevSub:disabled, #quiz-page #quiz-box #quiz-footer #nextSub:disabled {
+#quiz-page #quiz-box #quiz-footer #quiz-submit:disabled,
+#quiz-page #quiz-box #quiz-footer #prevSub:disabled,
+#quiz-page #quiz-box #quiz-footer #nextSub:disabled {
   opacity: 0.5;
+  cursor: default;
 }
 
 /* #endregion */
 /* #region Favorites/Blacklisted page */
-.favorites-item {
+.rate-item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -598,22 +720,58 @@ header .account-header-piece {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  margin: 0 auto;
   margin-top: 1.5rem;
   padding-bottom: 0.3rem;
   background-color: var(--c-overlay-background);
   width: 98%;
   padding: 15px;
   border-radius: 25px;
+  max-width: 90%;
+  min-width: 378px;
 }
 
-.favorites-item > div {
+@media only screen and (min-width: 750px) {
+  .rate-item {
+    max-width: 1200px;
+  }
+}
+
+.rate-item > div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.favorites-item .image-rating {
+.rate-item div p {
+  margin: 0.3rem 0;
+}
+
+.rate-item .image-rating {
   margin-right: 1rem;
+}
+
+.rate-item .blacklist-edit {
+  display: none;
+  border-top: solid 3px var(--c-main-title);
+  padding: 15px 0;
+}
+
+.rate-item .blacklist-edit div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-column-gap: 1rem;
+          column-gap: 1rem;
+}
+
+.rate-item .rate-left {
+  max-width: 80%;
+}
+
+.rate-item .rate-right {
+  -webkit-column-gap: 1rem;
+          column-gap: 1rem;
 }
 
 /* #endregion */
@@ -781,6 +939,42 @@ header .account-header-piece {
   100% {
     -webkit-transform: scale(0);
             transform: scale(0);
+  }
+}
+
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
   }
 }
 
