--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -70,7 +70,7 @@ h1 {
 }
 
 input[type="image"] {
-    width:25px;
+    width: 25px;
     height: 25px;
 }
 
@@ -93,7 +93,7 @@ label {
     flex-direction: row;
     border-bottom: solid 3px var(--c-main-title);
     font-size: 30px;
-    margin-top: 1.5rem;
+    margin-top: 3rem;
     padding-bottom: 0.3rem;
     justify-content: space-between;
 
@@ -125,7 +125,7 @@ header {
     justify-content: space-between;
     position: relative;
 
-    >img {
+    > img {
         display: block;
         width: 45%;
         min-width: 250px;
@@ -141,7 +141,7 @@ header {
     .big_navigation {
         display: none;
 
-        >ul {
+        > ul {
             display: flex;
             margin-right: 0.5rem;
 
@@ -151,7 +151,7 @@ header {
                 }
             }
 
-            >li {
+            > li {
                 line-height: 60px;
                 padding: 0 6px;
                 font-size: 1.6rem;
@@ -163,7 +163,7 @@ header {
                     font-weight: bold;
                 }
 
-                >ul {
+                > ul {
                     display: none;
                     position: absolute;
                     right: 0px;
@@ -171,7 +171,7 @@ header {
                     z-index: 50;
                     transform-origin: top center;
 
-                    >li {
+                    > li {
                         width: 100px;
                         text-align: center;
                         border-top: solid 3px var(--c-main-title);
@@ -181,7 +181,7 @@ header {
                         }
                     }
 
-                    >li:last-of-type {
+                    > li:last-of-type {
                         border-bottom: solid 3px var(--c-main-title);
                     }
                 }
@@ -433,28 +433,29 @@ header {
         height: 100%;
         display: grid;
         row-gap: 1rem;
-        grid-template-rows: min-content  min-content;
-        grid-template-areas: 
-        "qheader"
-        "qmain"
-        "qfooter";
+        grid-template-rows: min-content min-content;
+        grid-template-areas:
+            "qheader"
+            "qmain"
+            "qfooter";
 
         #quiz-head {
             grid-area: qheader;
             margin-bottom: auto;
 
             h1 {
-                color:var(--c-main-text);
+                color: var(--c-main-text);
                 opacity: var(--o-main-text);
             }
         }
 
-        #quiz-main {  
+        #quiz-main {
             grid-area: qmain;
             margin-bottom: auto;
 
-            h2, h3 {
-                color:var(--c-main-text);
+            h2,
+            h3 {
+                color: var(--c-main-text);
                 opacity: var(--o-main-text);
             }
 
@@ -462,14 +463,32 @@ header {
                 display: block;
                 margin: 0 auto;
                 text-align: center;
-                max-width:  90%;
+                max-width: 90%;
                 font-size: 1.2rem;
-               
+
                 .quiz-quote {
                     letter-spacing: 0.05rem;
                 }
 
                 margin-bottom: 1rem;
+
+                @include devices(desktop) {
+                    max-width: 800px;
+                    margin-top: 4rem;
+                    margin-bottom: 6rem;
+                    font-size: 1.7rem;
+                }
+
+                @include devices(wide) {
+                    max-width: 1000px;
+                    margin-top: 4rem;
+                    margin-bottom: 6rem;
+                    font-size: 1.7rem;
+                }
+
+                @include devices(uwide) {
+                    max-width: 90%;
+                }
             }
 
             .quiz-options {
@@ -479,15 +498,16 @@ header {
                 h3 {
                     text-align: center;
                     padding: 0.4rem;
-                    margin-bottom: 0.87rem;
+                    margin-bottom: 0.1rem;
                     border-bottom: solid 3px var(--c-main-title);
-                    font-size: 2rem;     
+                    font-size: 1.5rem;
                 }
 
-                .quiz-character-option, .quiz-movie-option {
+                .quiz-character-option,
+                .quiz-movie-option {
                     padding: 1.2rem 0;
                     background-color: var(--c-main-title);
-                    margin: 0.4rem 0;
+                    margin: 0.6rem 0;
                     text-align: center;
 
                     h2 {
@@ -495,41 +515,97 @@ header {
                     }
 
                     @include devices(desktop) {
-                        width: 300px;
+                        width: 325px;
+                        margin: 1.1rem 0;
+                        padding: 1.5rem 0;
                     }
 
                     @include devices(wide) {
-                        width: 500px;
+                        width: 490px;
+                    }
+
+                    @include devices(uwide) {
+                        width: 600px;
                     }
                 }
 
-                @include devices(desktop) {
-                    width: 100%;
-                    display: flex;
-                    justify-content: space-evenly;
-                }
-
                 .quiz-correct-option {
-                    display: flex;
-                    justify-content: space-between;
-                    background-color: #389B37;
+                    background-color: #389b37;
+                    display: grid;
+                    grid-template-columns: 1fr max-content 1fr;
+                    grid-template-areas: ". name score";
 
-                    h2 {
-                        margin-right: 0.5rem;
+
+                    h2:first-of-type {
+                        grid-area: name;
+                    }
+
+                    h2:last-of-type {
+                        grid-area: score;
+                        margin-left: auto;
+                        margin-right: 1rem;
                     }
                 }
 
                 .quiz-wrong-option {
-                    background-color: #E23D16;
+                    background-color: #e23d16;
+                }
+
+                @include devices(desktop) {
+                    display: flex;
+                    justify-content: space-evenly;
+                    gap: 3rem;
                 }
             }
 
-            .gamemode-button {
-                display: block;
-                width: 200px;
-                height: 200px;
+            .quiz-like-panel {
                 margin: 0 auto;
-                margin-top: 1rem;
+                width: fit-content;
+                margin-top: 3rem;
+                text-align: center;
+
+                input[type="image"] {
+                    width: 30px;
+                    height: 30px;
+                }
+ 
+                #reason-dislike-popup {
+                    display: none;
+                    animation: fadeIn 500ms;
+
+                    margin: 0 auto;
+                    width: fit-content;
+                    text-align: center;
+
+                    div {
+                        display: flex;
+                        column-gap: 1rem;
+                        input[type="image"] {
+                            margin-top: 0.3rem;
+                        }
+                    }
+                }
+            }
+
+            .gamemode-buttons {
+          
+                .gamemode-button {
+                    margin: 0 auto;
+                    display: block;
+                    width: 300px;
+                    height: 300px;
+                    margin-top: 3rem;
+                }
+
+                @include devices(tablet) {
+                    position: absolute;
+                    display: flex;
+                    justify-content: center;
+                    left: 50%;
+                    transform: translateX(-50%) translateY(-50%);
+                    top: 50%;
+                    gap: 5rem;
+                }
             }
         }
 
@@ -537,15 +613,19 @@ header {
             grid-area: qfooter;
             margin-top: auto;
             padding: 15px 15px;
-           
-            h1, h2 {
+
+            h1,
+            h2 {
                 font-size: 1.2rem;
                 color: var(--c-main-text);
             }
 
-            #quiz-submit, #prevSub, #nextSub {
+            #quiz-submit,
+            #prevSub,
+            #nextSub {
                 &:disabled {
                     opacity: 0.5;
+                    cursor: default;
                 }
             }
         }
@@ -556,27 +636,60 @@ header {
 
 /* #region Favorites/Blacklisted page */
 
-    .favorites-item {
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        justify-content: space-between;
-        margin-top: 1.5rem;
-        padding-bottom: 0.3rem;
-        
-        background-color: var(--c-overlay-background);
-        width: 98%;
-        padding: 15px;
-        border-radius: 25px;
+.rate-item {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0 auto;
+    margin-top: 1.5rem;
+    padding-bottom: 0.3rem;
 
-        > div {
-            display: flex;
-        }
-    
-        .image-rating {
-            margin-right: 1rem;
+    background-color: var(--c-overlay-background);
+    width: 98%;
+    padding: 15px;
+    border-radius: 25px;
+    max-width: 90%;
+    min-width: 378px;
+
+    @include devices(desktop) {
+        max-width: 1200px;
+    }
+
+
+    > div {
+        display: flex;
+    }
+
+    div {
+        p {
+            margin: 0.3rem 0;
         }
     }
+
+    .image-rating {
+        margin-right: 1rem;
+    }
+
+    .blacklist-edit {
+        display: none;
+        border-top: solid 3px var(--c-main-title);
+        padding: 15px 0;
+
+        div {
+            display: flex;
+            column-gap: 1rem;
+        }
+    }
+
+    .rate-left {
+        max-width: 80%;
+    }
+
+    .rate-right {
+        column-gap: 1rem;
+    }
+}
 
 /* #endregion */
 
@@ -724,6 +837,36 @@ header {
 
     100% {
         transform: scale(0);
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+    }
+}
+
+@-webkit-keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
     }
 }
 
