--- a/views/blacklist.ejs
+++ b/views/blacklist.ejs
@@ -1,66 +1,38 @@
 <script src="/js/blacklist.js" defer></script>
 
-<main id = "blacklist_container" class="wrapper">
+<main id = "rating_container" class="wrapper">
 
         <section class="title-bar">
                 <h1>Blacklist</h1>
         </section>
 
-        <%blacklistedQuotes.forEach((quote, i) => {%>
-        <article name="<%= quote._id %>" class="blacklist-item">
-                <div class="blacklist-left">
-                <p class="blacklist-item-quote">“<%= quote.dialog %>”</p>
+<%blacklistedQuotes.forEach((quote, i) => {%>
+        <article name="<%= quote._id %>" class="rate-item">
+                <div class="rate-left">
+                <input type="image" src="/assets/icon/ring.svg" alt="ring" class="image-rating">
+                <div>
+                <p class="rate-item-quote">“<%= quote.dialog %>”</p>
+                <p class="rate-item-character">Character: <a href="#">Baby Yoda</a></p>
                 <p class="blacklist-item-reason">Reason: <%= rates[i].reason %></p>
 
                 <section class="blacklist-edit">
                         <p>New Reason:</p>
                         <div>
                            <textarea name="edit" id="edit-blacklist" cols="50" rows="1" maxlength="100"></textarea>
-                           <input type="image" src="/assets/icon/send.svg" alt="send" class="edit-blacklist-submit">
+                           <input type="image" src="/assets/icon/right-arrow.svg" alt="send" class="edit-blacklist-submit">
                         </div>
                 </section>
+
                 </div>
-                
-                <div class="blacklist-right">
+                </div>
+
+                <div class="rate-right">
                         <input type="image"  src="/assets/icon/edit.svg" alt="edit" class="edit-blacklist-item">
                         <input type="image" src="/assets/icon/trash.svg" alt="trash" class="remove-blacklist-item">
                 </div>
         </article>
-        <%})%>
-        <article name="" class="favorites-item">
-                <div class="favorites-left">
-                <input type="image" src="/assets/icon/ring.svg" alt="ring" class="image-rating">
-                <div>
-                <p class="favorites-item-quote">“Yeeeeeeeeeeeeeeee”</p>
-                <p class="blacklist-item-reason">Character: <a href="#">Baby Yoda</a></p>
-                </div>
-                </div>
-                <div class="favorites-right">
-                        <input type="image" src="/assets/icon/trash.svg" alt="trash" class="remove-favorites-item">
-                </div>
-        </article>
-        <article name="" class="favorites-item">
-                <div class="favorites-left">
-                <input type="image" src="/assets/icon/ring.svg" alt="ring" class="image-rating">
-                <div>
-                <p class="favorites-item-quote">“Yeeeeeeeeeeeeeeee”</p>
-                <p class="blacklist-item-reason">Character: <a href="#">Baby Yoda</a></p>
-                </div>
-                </div>
-                <div class="favorites-right">
-                        <input type="image" src="/assets/icon/trash.svg" alt="trash" class="remove-favorites-item">
-                </div>
-        </article><article name="" class="favorites-item">
-                <div class="favorites-left">
-                <input type="image" src="/assets/icon/ring.svg" alt="ring" class="image-rating">
-                <div>
-                <p class="favorites-item-quote">“Yeeeeeeeeeeeeeeee”</p>
-                <p class="blacklist-item-reason">Character: <a href="#">Baby Yoda</a></p>
-                </div>
-                </div>
-                <div class="favorites-right">
-                        <input type="image" src="/assets/icon/trash.svg" alt="trash" class="remove-favorites-item">
-                </div>
-        </article>
+<%})%>
+      
+      
         </section>
 </main>
