--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -15,51 +15,18 @@
         <%let characterName = characters.find(char => char._id == quote.character).name;%>
         <%let characterURL = characters.find(char => char._id == quote.character).wikiUrl;%>        
 
-        <article name="<%= quote._id %>" class="favorites-item">
-                <div class="favorites-left">
-                <p class="favorites-item-quote">“<%= quote.dialog %>”</p>
-                <p class="blacklist-item-reason">Character: <a href="<%= characterURL %>"><%= characterName %></a></p>
+        <article name="<%= quote._id %>" class="rate-item">
+                <div class="rate-left">
+                <input type="image" src="/assets/icon/ring.svg" alt="ring" class="image-rating">
+                <div>
+                <p class="rate-item-quote">“<%= quote.dialog %>”</p>
+                <p class="rate-item-character">Character: <a href="<%= characterURL %>"><%= characterName %></a></p>
                 </div>
-                <div class="favorites-right">
-                        <input type="image" src="/assets/icon/trash.svg" alt="trash" class="remove-favorites-item">
+               </div>
+                <div class="rate-right">
+                 <input type="image" src="/assets/icon/trash.svg" alt="trash" class="remove-favorites-item">
                 </div>
         </article>
         <%})%>
-
-        <article name="" class="favorites-item">
-                <div class="favorites-left">
-                <input type="image" src="/assets/icon/ring.svg" alt="ring" class="image-rating">
-                <div>
-                <p class="favorites-item-quote">“Yeeeeeeeeeeeeeeee”</p>
-                <p class="blacklist-item-reason">Character: <a href="#">Baby Yoda</a></p>
-                </div>
-                </div>
-                <div class="favorites-right">
-                        <input type="image" src="/assets/icon/trash.svg" alt="trash" class="remove-favorites-item">
-                </div>
-        </article>
-        <article name="" class="favorites-item">
-                <div class="favorites-left">
-                <input type="image" src="/assets/icon/ring.svg" alt="ring" class="image-rating">
-                <div>
-                <p class="favorites-item-quote">“Yeeeeeeeeeeeeeeee”</p>
-                <p class="blacklist-item-reason">Character: <a href="#">Baby Yoda</a></p>
-                </div>
-                </div>
-                <div class="favorites-right">
-                        <input type="image" src="/assets/icon/trash.svg" alt="trash" class="remove-favorites-item">
-                </div>
-        </article><article name="" class="favorites-item">
-                <div class="favorites-left">
-                <input type="image" src="/assets/icon/ring.svg" alt="ring" class="image-rating">
-                <div>
-                <p class="favorites-item-quote">“Yeeeeeeeeeeeeeeee”</p>
-                <p class="blacklist-item-reason">Character: <a href="#">Baby Yoda</a></p>
-                </div>
-                </div>
-                <div class="favorites-right">
-                        <input type="image" src="/assets/icon/trash.svg" alt="trash" class="remove-favorites-item">
-                </div>
-        </article>
         </section>
 </main>
