--- a/views/blacklist.ejs
+++ b/views/blacklist.ejs
@@ -1,6 +1,6 @@
 <script src="/js/blacklist.js" defer></script>
 
-<main id = "rating_container" class="wrapper">
+<main id = "rating_page" class="wrapper">
 
         <section class="title-bar">
                 <h1>Blacklist</h1>
