--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -1,6 +1,6 @@
 <script src="/js/favorites.js" defer></script>
 
-<main id= "rating_container" class="wrapper">
+<main id= "rating_page" class="wrapper">
 
     <section class="title-bar">
         <h1>Favorites</h1>
