--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,5 +5,7 @@
         <label for="password">Password:</label>
         <input type="password" name="password" id="password">
         <input type="submit" value="Login">
+        <p>Don't have an account yet? <a href="/register">Register here</a></p>
     </form>
+   
 </main>
