--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,5 +7,6 @@
         <label for="passwordconfirm">Confirm password:</label><br>
         <input type="password" name="passwordconfirm" id="passwordconfirm"><br>
         <input type="submit" value="Register">
+        <p>Already have an account? <a href="/login">Log-in</a></p>
     </form>
 </main>
