--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -143,7 +143,7 @@ header {
 
         > ul {
             display: flex;
-            margin-right: 0.5rem;
+            margin-right: 0.7rem;
 
             .big-account-button {
                 &:hover {
@@ -656,7 +656,6 @@ header {
         max-width: 1200px;
     }
 
-
     > div {
         display: flex;
     }
@@ -756,6 +755,10 @@ header {
             width: 278px;
             margin: 0 auto;
 
+            &[type="text"], &[type="password"] {
+                color:white;
+            }    
+
             &[type="submit"] {
                 margin-top: 1rem;
                 background-color: var(--c-main-title);
@@ -772,6 +775,10 @@ header {
             display: block;
             font-size: 1.9rem;
             margin: 0.5rem 0;
+        }
+
+        p {
+          margin-top: 1.5rem;
         }
     }
 }
